--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "jshint": "node_modules/jshint/bin/jshint ./app",
         "unit-test": "node specs/unit-tests/testRunner.js -t test",
         "unit-test2": "node node_modules/jasmine/bin/jasmine.js specs/unit-tests/**/*-unitspec.js",
-        "debug_ui": "node node_modules/node-inspector/bin/inspector.js --no-preload & node --debug-brk node_modules/mocha/bin/mocha lib/spec/login/login_spec.js"
+        "debug_ui": "node node_modules/node-inspector/bin/inspector.js --no-preload & mocha --debug-brk node_modules/mocha/bin/mocha lib/spec/login/login_spec.js"
     },
     "author": "teamOpex",
     "devDependencies": {
